feat: integrate professional logging system with SLF4J and Logback
- Added [logback-spring.xml](cci:7://file:///Users/jacopo/Desktop/Progetti/TournamentManagment/src/main/resources/logback-spring.xml:0:0-0:0) with colorized console output and daily rolling file appender (30-day retention).
- Instrumented core services (Auth, Organization, Tournament, Match, Audit) with  for technical observability.
- Enhanced [GlobalExceptionHandler](cci:2://file:///Users/jacopo/Desktop/Progetti/TournamentManagment/src/main/java/com/tournamentmanagmentsystem/exception/GlobalExceptionHandler.java:16:0-60:1) to log full stack traces for unhandled exceptions (RFC 7807).
- Updated [README.md](cci:7://file:///Users/jacopo/Desktop/Progetti/TournamentManagment/README.md:0:0-0:0) with technical documentation for the new logging system.
- Fixed Lombok  import regressions and resolved several null-safety warnings in core services.
- Verified stability through unit tests and successful [INFO] Scanning for projects...
[INFO]
[INFO] -------------------< com:tournamentmanagmentsystem >--------------------
[INFO] Building TournamentManagmentSystem 0.0.1-SNAPSHOT
[INFO]   from pom.xml
[INFO] --------------------------------[ jar ]---------------------------------
[INFO]
[INFO] --- resources:3.3.1:resources (default-resources) @ tournamentmanagmentsystem ---
[INFO] Copying 1 resource from src/main/resources to target/classes
[INFO] Copying 6 resources from src/main/resources to target/classes
[INFO]
[INFO] --- compiler:3.13.0:compile (default-compile) @ tournamentmanagmentsystem ---
[INFO] Nothing to compile - all classes are up to date.
[INFO] ------------------------------------------------------------------------
[INFO] BUILD SUCCESS
[INFO] ------------------------------------------------------------------------
[INFO] Total time:  0.811 s
[INFO] Finished at: 2026-03-03T16:24:07+01:00
[INFO] ------------------------------------------------------------------------.